--- a/index.html
+++ b/index.html
@@ -9,11 +9,12 @@
 <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
 </head>
 	
-<body >
-	<h1>Meu primeiro site</h1>
+<body>
+		<h1>Meu primeiro site</h1>
 	<p>Esta é minha primeira experiência com HTML</p>
 	<img src="http://assets.stickpng.com/images/5ede48d0b760540004f2c5df.png"width="200rem">
+	<img src="img/5ede49f9b760540004f2c5e7 (1).png" width="200rem">
+
+    </body>
 	
-	</body>
-	
-	</html>
+</html>
